--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_category">CategoryActivity</string>
+    <string name="transitionName">transition</string>
 </resources>
