--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="openSoure_name">Open Source Licences</string>
     <string name="openSourceLicence_text">Volley\n\n Load-toast\n\n Glide\n\n Jsoup\n\n Unbescape  </string>
     <string name="title_activity_upload">UploadActivity</string>
+    <string name="title_activity_enter">Upload The News</string>
 </resources>
